--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          .content .LS{
             border:2px solid black;
             height: 20px;
-            width: 200px;
+            width: 210px;
             margin-top: 70px;
             margin-left: 5px;
             border-radius: 8px;
@@ -34,7 +34,7 @@
          .content .RS{
             border: 2px solid black;
             height: 20px;
-            width: 200px;
+            width: 210px;
             margin-top: 12px;
             margin-left: 62px;
             border-radius: 5px;
@@ -50,8 +50,8 @@
             margin-left: 70px;
            text-align: center;
             position: sticky;
-            top:4em;
-            width: 8em;
+            top:60px;
+            width: 110px;
             height: 3vh;
             background-color: brown;
         
@@ -175,7 +175,7 @@ input{
     position: absolute;
 }
 .main{
-    margin-left: 600px;
+    margin-left: 60px;
 }
     </style>
 </head>
